--- a/menu.html
+++ b/menu.html
@@ -7,8 +7,8 @@
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="400" />
         <meta property="og:image:height" content="300" />
-        <meta property="og:image" content="https://ibb.co/Bw7qjfm" />
-	    <meta property="og:image:secure_url" content="https://ibb.co/Bw7qjfm" />
+        <meta property="og:image" content="https://ibb.co/6mSQ78x" />
+	    <meta property="og:image:secure_url" content="https://i.ibb.co/G0Dm49L/Ella-s-Pizza-Sign.png/">
         <meta name="keywords" content="Restaurant Diner">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="utf-8">
