--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 }
               }, false);
             </script>
-        </div><h6>* HOURS MAY CHANGE DUE TO PANDEMIC</h6>
+        </div><h6></h6>
         
             
         <h2>706 Kearny ST,<br> San Francisco, CA 94108<br> Finacial District<br></h2>
