--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <title>Ellas Pizza - Contact</title>
         <meta name="description" content="24 Hour Diner">
         <link rel="stylesheet" href="main.css">
-        <link rel="shortcut icon" type="image/png" href="Ella's.png">
+        <link rel="shortcut icon" type="image/png" href="PieIcon.png">
         <link href="https://fonts.googleapis.com/css?family=Federant|Redressed|Kaushan+Script|Carattere|Righteous|Orbitron|Kanit|Quintessential" rel="stylesheet"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
