--- a/contact.html
+++ b/contact.html
@@ -88,13 +88,11 @@
             
         </nav>
         
-        <section id="form">
-
-        <h2 data-aos="zoom-in-down" data-aos-duration="2000" data-aos-anchor-placement="top-bottom" >Contact Us</h2>
+        <section data-aos="zoom-in-down" data-aos-duration="2000" data-aos-anchor-placement="top-bottom" id="form">
 
         <div class="container">
 
-            <form action="//formspree.io/info@menu-made.com" method="POST">
+            <form data-aos="zoom-in-down" data-aos-duration="2000" data-aos-anchor-placement="top-bottom" action="//formspree.io/info@menu-made.com" method="POST">
 
                 <input data-aos="zoom-in-down" data-aos-duration="800" data-aos-delay="1200" data-aos-anchor-placement="top-bottom" type="text" id="fname" name="fname" placeholder="Full Name"><br>
 
