--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             
             <div class="desktop">
                 
-                <section data-aos="fade-left" data-aos-duration="700" data-aos-anchor-placement="top-bottom" class="desknav">
+                <section data-aos="zoom-in-left" data-aos-duration="1700" data-aos-anchor-placement="top-bottom" class="desknav">
                     <a href="index.html">Home</a>
                     <a href="menu.html">Menu</a>
                     <a href="contact.html">Contact</a>
