--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="desktop">
                 
                 <section data-aos="zoom-in-left" data-aos-duration="1700" data-aos-anchor-placement="top-bottom" class="desknav">
-                    <a href="index.html">Home</a>
+                    <a style="text-shadow: 2px 2px 2px #FF2700, -2px -2px 2px #FF2700, -2px 2px 2px #FF2700, 2px -2px 2px #FF2700;" href="index.html">Home</a>
                     <a href="menu.html">Menu</a>
                     <a href="contact.html">Contact</a>
                     <a href="https://www.doordash.com/store/tony's-pizza-napoletana-san-francisco-401987/?cursor=eyJzZWFyY2hfaXRlbV9jYXJvdXNlbF9jdXJzb3IiOnsicXVlcnkiOiJwaXp6YSIsIml0ZW1faWRzIjpbXSwic2VhcmNoX3Rlcm0iOiJwaXp6YSIsInZlcnRpY2FsX2lkIjotOTk5LCJ2ZXJ0aWNhbF9uYW1lIjoiYWxsIn0sInN0b3JlX3ByaW1hcnlfdmVydGljYWxfaWRzIjpbMSwxNDIsMTQ0XX0=&pickup=false">Deliver</a>
