--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
         }
         </script>
 
-        <nav>
+        <nav style="z-index: -9999">
             <div data-aos="fade-right" data-aos-duration="3000" data-aos-anchor-placement="top-bottom"><a href="#openModal99"><img class="logo" src="Ella'sPizzaRosso.png"></a></div>
         
                 <div id="openModal99" class="modalDialog">
