--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <img src="Mom.jpg">
             </div>
             
-            <h1>&#x1F525;  ELLA'S &nbsp; PIZZA &nbsp; &#127829; &nbsp;OPEN &nbsp; 24 HOURS  &#x1F525;</h1>
+            <h1>&#x1F525;  ELLA'S  PIZZA &nbsp; &#127829; &nbsp;OPEN  24 HOURS  &#x1F525;</h1>
 
             <script type="text/javascript">
                window.addEventListener("DOMContentLoaded", function(e) {
