--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <title>Ellas Pizza - Contact</title>
         <meta name="description" content="24 Hour Diner">
         <link rel="stylesheet" href="main.css">
-        <link rel="shortcut icon" type="image/png" href="PieIcon.png">
+        <link rel="shortcut icon" type="image/png" href="Ella'sPizzaSign.png">
         <link href="https://fonts.googleapis.com/css?family=Federant|Redressed|Kaushan+Script|Carattere|Righteous|Orbitron|Kanit|Quintessential" rel="stylesheet"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -50,7 +50,7 @@
         }
         </script>
 
-        <nav style="z-index: -9999">
+        <nav>
             <div data-aos="fade-right" data-aos-duration="3000" data-aos-anchor-placement="top-bottom"><a href="#openModal99"><img class="logo" src="Ella'sPizzaRosso.png"></a></div>
         
                 <div id="openModal99" class="modalDialog">
