--- a/menu.html
+++ b/menu.html
@@ -51,7 +51,7 @@
         </script>
 
         <nav>
-            <div data-aos="fade-right" data-aos-duration="3000" data-aos-anchor-placement="top-bottom"><a href="#openModal99"><img class="logo" src="Ella'sPizzaRosso.png"></a></div>
+            <div data-aos="zoom-out-right" data-aos-duration="3000" data-aos-anchor-placement="top-bottom"><a href="#openModal99"><img class="logo" src="Ella'sPizzaRosso.png"></a></div>
         
                 <div id="openModal99" class="modalDialog">
                 <div>
